[gd_scene load_steps=8 format=3 uid="uid://dxytnewiwcp7r"]

[ext_resource type="Script" path="res://Interactables/interatables_scripts/bullet_hell_pickup_scene.gd" id="1_bm5jj"]
[ext_resource type="Texture2D" uid="uid://devncfpf0c8l7" path="res://Sprites/Ready Potion I.png" id="2_5vmpi"]
[ext_resource type="AudioStream" uid="uid://dshr8u3mysecc" path="res://SoundEffects/41529__jamius__potiondrinklong.ogg" id="2_mxvtm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hij80"]
size = Vector2(10, 18)

[sub_resource type="Animation" id="Animation_rggef"]
resource_name = "Active"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_kdyql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gyy8e"]
_data = {
"Active": SubResource("Animation_rggef"),
"RESET": SubResource("Animation_kdyql")
}

[node name="bullet_hell_pickup_scene" type="Area2D"]
z_index = 3
script = ExtResource("1_bm5jj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5vmpi")
hframes = 6
vframes = 10
frame = 6

[node name="bullethell_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hij80")

[node name="bullethell_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gyy8e")
}
autoplay = "Active"

[node name="pickup_object" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_mxvtm")
panning_strength = 0.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
